# yp-nx-dashboard

./: .dockerignore  .gitattributes  .gitignore  AGENTIC_WORKFLOW_DESIGN.md  AI_FACTORY_ROADMAP.md  CCW_MIGRATION_PLAN.md  Cargo.toml  Dockerfile  NexusFlow.html  README.md  build_package.sh  dev.sh  docker-compose.yml  dump.rdb  test_send
.playwright-mcp/: page-2026-04-06T11-48-25-470Z.yml  page-2026-04-06T11-49-05-130Z.yml  page-2026-04-07T09-40-40-770Z.yml  page-2026-04-07T09-40-56-423Z.yml  page-2026-04-07T09-41-15-672Z.yml  page-2026-04-07T09-42-12-387Z.yml  page-2026-04-07T09-43-10-316Z.yml  page-2026-04-07T09-45-33-553Z.yml  page-2026-04-07T09-45-56-072Z.yml  page-2026-04-07T09-48-07-113Z.yml  page-2026-04-07T09-49-03-878Z.yml  page-2026-04-07T09-49-35-014Z.yml  page-2026-04-07T09-49-55-394Z.yml  page-2026-04-07T09-50-19-648Z.yml  page-2026-04-07T09-50-53-988Z.yml  page-2026-04-07T09-51-05-467Z.yml  page-2026-04-07T09-51-26-739Z.yml  page-2026-04-07T10-53-50-071Z.yml  page-2026-04-07T10-54-11-674Z.yml  page-2026-04-07T10-57-15-356Z.yml  page-2026-04-07T10-59-17-332Z.yml  page-2026-04-07T11-37-50-214Z.yml  page-2026-04-07T11-38-19-323Z.yml  page-2026-04-07T11-39-24-111Z.yml  page-2026-04-07T11-40-24-182Z.yml  page-2026-04-07T11-45-58-887Z.yml  page-2026-04-07T11-47-10-534Z.yml  page-2026-04-07T11-47-20-998Z.yml  page-2026-04-08T10-03-13-039Z.yml  page-2026-04-08T10-09-43-444Z.yml
core/ai/: Cargo.toml  config-example.yaml
core/ai/examples/: config_example.rs
core/ai/src/: anthropic.rs  claude_switch.rs  cli_registry.rs  codex.rs  google.rs  lib.rs  manager.rs  minimax.rs  ollama.rs  openai.rs  opencode.rs  qwen.rs  registry.rs  selector.rs  traits.rs
core/code-intel/: Cargo.toml
core/code-intel/src/: index.rs  lib.rs  references.rs  symbols.rs  tree_sitter.rs
core/orchestrator/: Cargo.toml
core/orchestrator/src/: cli.rs  error.rs  executor.rs  lib.rs  message_bus.rs  scheduler.rs  team.rs
core/plugin/: Cargo.toml
core/plugin/src/: agent.rs  lib.rs  plugin_trait.rs  registry.rs
core/sandbox/: Cargo.toml
core/sandbox/src/: executor.rs  lib.rs  limits.rs
core/skills/: Cargo.toml
core/skills/schemas/: brainstorm.yaml  delegation-check.yaml  review-code.yaml  security-audit.yaml  skill-generator.yaml
core/skills/src/: collaboration_skills.rs  core_skills.rs  development_skills.rs  executor.rs  lib.rs  planning_skills.rs  registry.rs  skill.rs  workflow_skills.rs
core/workflow/: Cargo.toml
core/workflow/src/: engine.rs  events.rs  lib.rs  parser.rs  state.rs  watcher.rs
docs/: Claude-CLI-Integration.md  FOR_AI_TESTER.md  OpenClaw-Deployment-Guide.md  PROGRESS.md  TEST_SCENARIOS.md  (+9 more)
nx_a2ui/: Cargo.toml
nx_a2ui/src/: dialog.rs  lib.rs  message.rs  notification.rs  progress.rs  streaming.rs
nx_api/: Cargo.toml
nx_api/src/: config.rs  error.rs  lib.rs  main.rs  migrations.rs  response.rs
nx_api/src/a2ui/: message.rs  mod.rs  session.rs
nx_api/src/middleware/: auth.rs  mod.rs
nx_api/src/models/: feature_flag.rs  group_chat.rs  issue.rs  mod.rs  pipeline.rs  project.rs  project_module.rs  skill.rs  team.rs
nx_api/src/routes/: a2ui.rs  ai_config.rs  artifacts.rs  browser.rs  execution_logs.rs  executions.rs  feature_flags.rs  file_watch.rs  group_chat.rs  health.rs  issues.rs  knowledge.rs  memory.rs  mod.rs  model_routing.rs  pipelines.rs  plugins.rs  process_lifecycle.rs  processes.rs  projects.rs  quick_run.rs  resume.rs  scheduler.rs  search.rs  sessions.rs  skills.rs  snapshots.rs  sprints.rs  teams.rs  teams_state.rs  teams_v2.rs  templates.rs  test_gen.rs  triggers.rs  wisdom.rs  workflows.rs  workspaces.rs
nx_api/src/scheduler/: mod.rs  queue.rs  task.rs  worker.rs
nx_api/src/search/: fts.rs  hybrid.rs  mod.rs  semantic.rs
nx_api/src/services/: agent_team_service.rs  ai_provider_repository.rs  ai_provider_service.rs  alert_service.rs  api_key_repository.rs  artifact_repository.rs  artifact_tracker.rs  artifact_watcher.rs  claude_cli.rs  claude_terminal.rs  events.rs  execution_bridge.rs  execution_log_service.rs  execution_repository.rs  execution_service.rs  file_skill_repository.rs  git_watcher.rs  group_chat_repository.rs  group_chat_service.rs  issue_repository.rs  mod.rs  model_router.rs  plugin_service.rs  project_module_repository.rs  project_module_service.rs  project_repository.rs  project_service.rs  pty_task_watcher.rs  screen_emu.rs  session_message_store.rs  session_repository.rs  session_service.rs  skill_repository.rs  skill_service.rs  sprint_service.rs  team_repository.rs  team_service.rs  telegram_service.rs  test_generator.rs  workflow_repository.rs  (+3 more)
nx_api/src/services/knowledge/: chunker.rs  kb_search.rs  mod.rs  repository.rs
nx_api/src/services/team_evolution/: crash_detector.rs  error.rs  feature_flag_repository.rs  feature_flag_service.rs  file_watcher.rs  integration.rs  mod.rs  pipeline_dispatcher.rs  pipeline_repository.rs  pipeline_service.rs  process_isolation.rs  process_lifecycle.rs  quality_gate.rs  resume_service.rs  snapshot_repository.rs  snapshot_service.rs  temp_cleaner.rs
nx_api/src/wisdom/: entry.rs  mod.rs  query.rs  store.rs
nx_api/src/ws/: agent_execution.rs  claude_stream.rs  handler.rs  mod.rs  pty_ws.rs  run_command.rs  terminal.rs
nx_api/templates/: brainstorm.yaml  workflow-lite-plan.yaml  workflow-multi-cli-plan.yaml  workflow-tdd-plan.yaml  workflow-test-fix.yaml  writing-plans.yaml
nx_cli/: Cargo.toml
nx_cli/src/: commands.rs  config.rs  main.rs
nx_cli/src/slash_commands/: dispatch.rs  issue.rs  mod.rs  session.rs  workflow.rs
nx_mcp/: Cargo.toml
nx_mcp/src/: lib.rs  server.rs
nx_mcp/src/tools/: mod.rs
nx_mcp/src/transport/: mod.rs  stdio.rs
nx_memory/: Cargo.toml
nx_memory/src/: bm25.rs  embedding.rs  lib.rs  search.rs  storage.rs  types.rs
nx_search/: Cargo.toml
nx_search/src/: ace.rs  codexlens.rs  hybrid.rs  lib.rs
nx_search/src/embedding/: mod.rs  provider_adapter.rs
nx_search/src/index/: mod.rs
nx_search/src/searcher/: mod.rs
nx_session/: Cargo.toml
nx_session/src/: checkpoint.rs  lib.rs  manager.rs  persistence.rs  pty.rs  session.rs
(+287 files in other folders)
