[workspace]
resolver = "2"
members = [
    "core/ai",
    "core/code-intel",
    "core/plugin",
    "core/sandbox",
    "core/workflow",
    "core/orchestrator",
    "core/skills",
    "nx_cli",
    "nx_api",
    "nx_memory",
    "nx_session",
    "nx_search",
    "nx_mcp",
    "nx_a2ui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["NexusFlow Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-stream = "0.3"

# Web framework
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bytes = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async traits
async-trait = "0.1"

# Mocking
mockall = "0.12"

# Testing
tokio-test = "0.4"
rstest = "0.18"
proptest = "1.4"
tempfile = "3.10"

# Tree-sitter
tree-sitter = "0.22"
tree-sitter-highlight = "0.22"
tree-sitter-config = "0.20"
tree-sitter-rust = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-python = "0.21"

#once_cell = "1.19"
parking_lot = "0.12"
portable-pty = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
