[package]
name = "nx_api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
bytes.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# UUID
uuid.workspace = true

# Time
chrono.workspace = true

# WebSocket
tokio-tungstenite.workspace = true
futures-util.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
async-stream.workspace = true

# Database
rusqlite.workspace = true

# HTTP client (for Telegram Bot API)
reqwest.workspace = true

# Concurrency
parking_lot.workspace = true
once_cell = "1.19"
portable-pty.workspace = true

# Cross-platform user dirs (for Claude CLI config persistence)
dirs = "5"

# File watching
notify = "7"

# Async traits
async-trait.workspace = true

# Internal crates
nexus-workflow = { path = "../core/workflow" }
nexus-ai = { path = "../core/ai" }
nexus-code-intel = { path = "../core/code-intel" }
nexus-sandbox = { path = "../core/sandbox" }
nx_plugin = { path = "../core/plugin" }
nexus-skills = { path = "../core/skills" }
nx_session = { path = "../nx_session" }
nx_a2ui = { path = "../nx_a2ui" }
nx_memory = { path = "../nx_memory" }

[features]
default = []

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"