[package]
name = "nx"
version.workspace = true
edition.workspace = true

[[bin]]
name = "nx"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
clap = { version = "4.4", features = ["derive", "cargo"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"

# Web framework
axum = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }

# Internal crates
nexus-ai = { path = "../core/ai" }
nexus-workflow = { path = "../core/workflow" }
nexus-code-intel = { path = "../core/code-intel" }
nexus-sandbox = { path = "../core/sandbox" }
nx_a2ui = { path = "../nx_a2ui" }

[dev-dependencies]
tokio-test = "0.4"
