[package]
name = "nx_plugin"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
once_cell = "1.19"

# For SkillRegistry integration
nexus-skills = { path = "../skills" }

# For AI registry integration
nexus-ai = { path = "../ai" }
